fix-beeline: parse semicolon which in regex error, parse tab error